crates/cribo/tests/snapshots/execution_results@importlib_preserved_first_party.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_first_party/main.py
---
ExecutionResults {
    status: Success,
    stdout: "first-party helper",
    stderr: "",
}
