crates/cribo/tests/snapshots/execution_results@importlib_preserved_first_party_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_first_party_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "first-party helper loaded\nVALUE: first-party helper",
    stderr: "",
}
