crates/cribo/tests/snapshots/execution_results@importlib_preserved_lazy.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_lazy/main.py
---
ExecutionResults {
    status: Success,
    stdout: "before any import\nlazy_helper imported\nlazy value",
    stderr: "",
}
