crates/cribo/tests/snapshots/execution_results@importlib_preserved_namespace_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_namespace_collision/main.py
---
ExecutionResults {
    status: Success,
    stdout: "collision_target imported\nVALUE: object-captured\nglobal: sentinel",
    stderr: "",
}
