crates/cribo/tests/snapshots/execution_results@importlib_preserved_stateful_failure.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_stateful_failure/main.py
---
ExecutionResults {
    status: Success,
    stdout: "attempt 1\nround 1: failed on attempt 1\nattempt 1\nround 2: failed on attempt 1",
    stderr: "",
}
