crates/cribo/tests/snapshots/execution_results@importlib_preserved_variable_anchor.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_variable_anchor/main.py
---
ExecutionResults {
    status: Success,
    stdout: "other backend other backend",
    stderr: "",
}
