crates/cribo/tests/snapshots/execution_results@importlib_shadowed_keyword_assignment.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_shadowed_keyword_assignment/main.py
---
ExecutionResults {
    status: Success,
    stdout: "custom:external_pkg\n{\"ok\": true}",
    stderr: "",
}
