crates/cribo/tests/snapshots/execution_results@importlib_static_double_bound_name.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_static_double_bound_name/main.py
---
ExecutionResults {
    status: Success,
    stdout: "caught: name bound twice",
    stderr: "",
}
