crates/cribo/tests/snapshots/execution_results@importlib_unbound_local_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_unbound_local_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "UnboundLocalError preserved",
    stderr: "",
}
