crates/cribo/tests/snapshots/execution_results@importlib_walrus_static.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_walrus_static/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper loaded\nVALUE: helper reached through walrus",
    stderr: "",
}
